# mini-games

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  docker-bake.json  fly.toml  render.yaml  start.sh
games-backend/: Cargo.toml
games-backend/.sqlx/: query-09bdd4156f5b6b29d8a7ae0f4e791ed6bd1954c63566bc005ba03d165834485a.json  query-0e53dd924c85d5e24bc66ba02a19abe7641e2f8dbf1b9554df7d537fe3f17d91.json  query-0f78236395f9962336b35200ca8681bbc8dca61b558d1b23e54ba9d281bbc403.json  query-121b92a8b3556505c51420c0866cf5983156945831c06d2ee56b8c6ff12e6eb2.json  query-19c6fc00c85881e29137f96d934b78170d1cae6dcc4abb8aa8e72d775771088f.json  query-22e1d934536a8be9e0885bad64dcb9dd54cca43cd4f85f83c7a113bb67412630.json  query-362f82e576459339acef914575b4d8ef029729c1f68ab65d6bde27f645770919.json  query-379ea88e8dd9a0d627ccc6446e051792474323f5a3c61f353adbdd3db8faf24f.json  query-44a8b6471b9ef8d6697898010a2e445c4b0b3f523c4bd579c14f7b36987e47fc.json  query-46cce3cf3fb288f8018764a558087ba1121da12e4fc773945c89af9301f9c1d0.json  query-587a7cf62544f5c0d970da4f7ab1b1bae5f2aec9b85364f587298c8480171138.json  query-5949690ebd933e801b55c97d00d1fa2e7e40493ca9693f574b2fc266f369d15b.json  query-5afcd4c49990c833427cd82e16997c27242fdac11f76bf0ea90ce66f6425acd5.json  query-622f34ac239b587ac3e03977ab0be937b3c23a084d9ba85cced26099ec9435b1.json  query-66911df66b84d2356d2a151584ea60f5f5dffc2f957bbd84a1bb72a9d6e1c071.json  query-6d2f85758c057c89c79090f3afd9ee11628886e196f9f4b3a77cbe37fd1445d6.json  query-7d5a703b59151f2a40b8a81408405799c04f5a0a984bc6663224c7f87e8104fc.json  (+10 more)
(+282 files in other folders)
