[package]
name = "games-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
argon2 = "0.5"
jsonwebtoken = "9"
time = "0.3"
axum-extra = { version = "0.10", features = ["cookie", "query"] }
sha2 = "0.10.9"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3.31"
rand = "0.8"
bytes = "1.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
